{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Debug",
            "id": "532c949a-46e8-4cf7-b962-0f87fe10d9a7",
            "actions": [
                {
                    "name": "Obj1",
                    "type": "Button",
                    "id": "f32b1643-22a1-42ef-aa99-39693453612d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Obj2",
                    "type": "Button",
                    "id": "72fe694d-5e78-4280-b2d7-a33b0d32834b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Obj3",
                    "type": "Button",
                    "id": "b77df266-d546-4722-b022-6c3c32d2a421",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Obj4",
                    "type": "Button",
                    "id": "1bd9763c-8fb2-4670-b163-b6c536eca319",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Return",
                    "type": "Button",
                    "id": "b529df42-4027-4694-8c67-6c57a8f9e878",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drag",
                    "type": "Button",
                    "id": "ebab828a-28ea-4df6-9e96-2aed6e0f6cd2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "064adf0c-556e-484a-951f-86424f6df61a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Obj1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cdbe80c1-aea7-43d3-8861-ffd60ed2f4f3",
                    "path": "<OculusTouchController>/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Obj1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df97f4c9-0b01-47b8-b692-cd52d5b6e815",
                    "path": "<Keyboard>/#(S)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Obj2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0b1f978-e078-4de1-80a1-3ca875501e7b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Obj3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1f5ea90-55c8-4aa6-8a7c-c4a496fc46cf",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Obj4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fddb15d3-233b-407c-a431-7a3bbe598f71",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Return",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6387540b-7e1e-4006-81cd-69adcebda575",
                    "path": "<OculusTouchController>/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Return",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab7cda71-44ca-4dcb-a45b-e83bcfcbb2b4",
                    "path": "<OculusTouchController>/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}